syntax = "proto3";

// Health endpoints that we want implemented across all enclaves
// TODO: can this go away? Why do we need both these and the k8s healthcheck protocol?

package health;

service HealthCheckService {
  rpc HostHealth(HostHealthRequest) returns (HostHealthResponse);
  rpc AppHealth(AppHealthRequest) returns (AppHealthResponse);
}

// A null request type for endpoints that don't need any arguments.
message HostHealthRequest {}
message AppHealthRequest {}

// Status of the secure app host server.
message HostHealthResponse {
  // A HTTP status code.
  int32 code = 1;
}

message AppHealthResponse {
  // A gRPC status code.
  int32 code = 1;
}
